--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
 .App {
+  display: flex;
+  flex-direction: column;
+  background-color: #121213;
+  min-height: 100vh;
+  color: white;
+
+}
+.App-header {
+  font-family: 'nyt-karnakcondensed';
+  font-weight: 700;
+  line-height: 100%;
+  text-align: center;
+  pointer-events: none;
+  border-bottom: 1px solid #3a3a3d;
+}
+
+.Box {
+  display: block;
+  width: 62px;
+  height: 62px;
+  border: 2px solid #3a3a3d;
+  margin: 3px 3px 4px;
+  background-color: #121213;
+  font-size: 30px;
+  color: white;
+  font-weight: bold;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.RowOfBoxes{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.GridOfBoxes {
+  margin-top: 200px;
 }
